--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,21 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^1.0.4
+  email_validator: ^2.1.17
+  firebase_auth: ^3.11.2
+  freezed_annotation: ^2.1.0
+  logger: ^1.1.0
+  firebase_core: ^1.24.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   pedantic_mono: any
+  build_runner: ^2.2.1
+  freezed: ^2.1.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
