--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   cloud_firestore: ^3.5.1
   fluttertoast: ^8.1.2
+  extended_text_field: ^10.2.0
+  flutter_math_fork: ^0.6.3+1
+  extended_text: ^9.1.2
 
 dev_dependencies:
   flutter_test:
